# Kestrel

./: .gitattributes  .gitignore  README.md  pyproject.toml
deploy/scheduler/: README.md  crontab.example  daily_snapshot.sh  kestrel-snapshot.service  kestrel-snapshot.timer  morning.ps1  snapshot_task.ps1
docs/: 01-overview-goals-scope.md  02-kite-connect-constraints.md  03-architecture.md  04-tech-stack.md  05-agent-architecture.md  06-data-plane.md  07-execution-plane.md  08-cognition-plane.md  09-phased-build-plan.md  10-prerequisites-and-ops.md  11-open-questions-and-gaps.md  12-glossary.md  13-decision-log.md  REVIEWING.md
kestrel/: README.md  __init__.py  costs.py
kestrel/backtest/: __init__.py  engine.py  metrics.py
kestrel/data/: __init__.py  fundamentals.py  kite_history.py  pit.py  reference.py  snapshot.py  universe.py  yahoo.py
kestrel/execution/: __init__.py  book.py  exits.py  manager.py  risk.py  sizing.py
kestrel/kite/: __init__.py  auth.py  tokenstore.py
kestrel/strategies/: __init__.py  low_volatility.py  momentum.py  value.py
regulatory/: INDEX.md
regulatory/nse/: NSE-INVG-67858_2025-05-05_algo-implementation-standards.txt
regulatory/sebi/: SEBI-CIR-2025-0000013_2025-02-04_safer-participation-retail-algo.txt  (+1 more)
scripts/: kite_login.py  pull_history.py  run_factor_comparison.py  run_momentum.py  run_slice.py  snapshot_reference.py
tests/: test_costs.py  test_engine.py  test_execution.py  test_kite_auth.py  test_kite_history.py  test_low_volatility.py  test_metrics.py  test_snapshot.py  test_snapshot_job.py  test_value.py
(+2 files in other folders)
